# project-DaemonKiller

./: .gitignore  .wget-hsts  README.md  environment.yml
chunking/: finetune.py  finetune_test.py  generate.py  helper_functions.py  preprocess.py  query.py  semchunk.py  test.py
chunking/faiss_index/: index.faiss  index.pkl
chunking/path_to_persistent_storage/: chroma.sqlite3
finetune_embedding/: convert.py  finetune.py
project-DaemonKiller/: .gitignore  LICENSE  Makefile  Modelfile  README.md  environment.yml  pyproject.toml
project-DaemonKiller/docs/: mkdocs.yml
project-DaemonKiller/docs/docs/: index.md
project-DaemonKiller/main/: dataset.py  features.py  frontend.py  generation.py  helper_functions.py  main.py  plots.py  predictions.py  rag.py  rag_history.py
project-DaemonKiller/main/modeling/: predict.py  train.py
